hphp/test/slow/typedef/typedef_parent.php.expectf
Fatal error: Cannot access parent when no class scope is active in %s on line 2
